<resources>
    <string name="app_name">Still</string>
    <string name="widget_name">Screen time</string>
    <string name="widget_description">Today’s screen time at a glance</string>
    <string name="widget_screen_time">Screen time</string>
    <string name="widget_today">Today</string>
    <string name="widget_loading">Updating…</string>
    <string name="widget_permission_needed">Usage access needed</string>
    <string name="widget_open_still">Open Still</string>
    <string name="widget_unavailable">Unavailable</string>
    <string name="widget_refresh">Refresh screen time</string>
    <string name="widget_open_app">Open Still</string>
    <string name="widget_preview_duration">2h 14m</string>
    <string name="widget_dayline_name">Dayline</string>
    <string name="widget_dayline">Dayline</string>
    <string name="widget_dayline_description">Today’s screen use across the day</string>
    <string name="widget_dayline_refresh">Refresh Dayline</string>
    <string name="widget_dayline_open_app">Open Dayline in Still</string>
    <string name="widget_dayline_loading_description">Dayline is updating</string>
    <string name="widget_dayline_description_ready">Dayline, %1$s screen use today</string>
    <string name="widget_dayline_permission_description">Dayline needs usage access. Open Still.</string>
    <string name="widget_dayline_unavailable_description">Dayline is unavailable. Open Still.</string>
</resources>
