<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_dayline_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/widget_dayline_open_app">

    <ImageView
        android:id="@+id/widget_dayline_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/widget_background" />

    <LinearLayout style="@style/WidgetLayout">

        <LinearLayout style="@style/WidgetContentColumn">

            <TextView
                android:id="@+id/widget_dayline_label"
                style="@style/WidgetLabel"
                android:text="@string/widget_dayline"
                />

            <FrameLayout style="@style/WidgetContentSlot">
                <LinearLayout
                    android:id="@+id/widget_dayline_chart"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/widget_dayline_bar"
                        android:layout_width="match_parent"
                        android:layout_height="18dp"
                        android:contentDescription="@null"
                        android:scaleType="fitXY" />

                </LinearLayout>

                <TextView
                    android:id="@+id/widget_dayline_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:maxLines="1"
                    android:text="@string/widget_loading"
                    android:textColor="@color/widget_secondary"
                    android:textSize="14sp"
                    android:visibility="gone" />
            </FrameLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/widget_dayline_refresh"
            style="@style/WidgetRefreshAction"
            android:background="@android:color/transparent"
            android:contentDescription="@string/widget_dayline_refresh"
            />
    </LinearLayout>
</FrameLayout>
