<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:contentDescription="@string/widget_open_app">

    <ImageView
        android:id="@+id/widget_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@null"
        android:scaleType="fitXY"
        android:src="@drawable/widget_background" />

    <LinearLayout style="@style/WidgetLayout">

        <LinearLayout style="@style/WidgetContentColumn">

            <TextView
                android:id="@+id/widget_label"
                style="@style/WidgetLabel"
                android:text="@string/widget_screen_time"
                />

            <FrameLayout style="@style/WidgetContentSlot">
                <TextView
                    android:id="@+id/widget_value_regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:fontFamily="sans"
                    android:maxLines="1"
                    android:text="@string/widget_loading"
                    android:textColor="@color/widget_primary"
                    android:textSize="24sp"
                    android:textStyle="normal"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/widget_value_medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:fontFamily="sans-serif-medium"
                    android:maxLines="1"
                    android:text="@string/widget_loading"
                    android:textColor="@color/widget_primary"
                    android:textSize="24sp"
                    android:textStyle="normal"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/widget_value_bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:ellipsize="end"
                    android:fontFamily="sans"
                    android:maxLines="1"
                    android:text="@string/widget_loading"
                    android:textColor="@color/widget_primary"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </FrameLayout>
        </LinearLayout>

        <ImageButton
            android:id="@+id/widget_refresh"
            style="@style/WidgetRefreshAction"
            android:background="@android:color/transparent"
            android:contentDescription="@string/widget_refresh"
            />
    </LinearLayout>
</FrameLayout>
